--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "remote_url": "192.168.255.175",
+    "remote_url": "x.x.x.x",
     "remote_user": "pi",
     "remote_pwd": "",
     "remote_base_dir": "/home/pi/work",
-    "target_framework": "net5.0"
+    "target_framework": "net5.0",
+    "architecture": "linux-arm64"
 }
